JumpScript/tests/baselines/reference/allowSyntheticDefaultImports8.errors.txt
tests/cases/compiler/a.jump(1,10): error TS2305: Module '"tests/cases/compiler/b"' has no exported member 'default'.


==== tests/cases/compiler/b.d.jump (0 errors) ====
    export function foo();
    
    export function bar();
    
==== tests/cases/compiler/a.jump (1 errors) ====
    import { default as Foo } from "./b";
             ~~~~~~~
!!! error TS2305: Module '"tests/cases/compiler/b"' has no exported member 'default'.
    Foo.bar();
    Foo.foo();